[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "anthropic-tokenizer"
version = "0.1.0"
description = "Fast local Claude tokenizer (Rust + PyO3). Falls back from Anthropic count_tokens API to embedded BPE tokenizer."
requires-python = ">=3.8,<3.14"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
